correction contraste de couleurs

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1407,7 +1407,7 @@ textarea {
 
 a {
     color: #337ab7;
-    text-decoration: none
+    text-decoration: none;
 }
 
 a:focus,
